# audio_dataset_auto_create

./: .gitignore  README.md  docker-compose-gpu.yml  pyproject.toml
.docker/: Dockerfile.gpu
notebook/whisper/: sample_001.ipynb
src/util/: load_env.py
