[tool.poetry]
name = "audio-dataset-auto-create"
version = "0.1.0"
description = ""
authors = ["k-washi <kai.washizaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
